--- a/CinemaInfrastructure/Views/Bookings/Edit.cshtml
+++ b/CinemaInfrastructure/Views/Bookings/Edit.cshtml
@@ -2,14 +2,12 @@
 @{
     ViewData["Title"] = "Змінити бронювання";
 }
-<h1>Змінити бронювання (змінити місце)</h1>
+<h1>Змінити бронювання</h1>
 
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-            <!-- Приховані поля для збереження початкових ключових значень -->
             <input type="hidden" name="viewerId" value="@Model.ViewerId" />
             <input type="hidden" name="sessionId" value="@Model.SessionId" />
             <input type="hidden" name="seatId" value="@Model.SeatId" />
@@ -21,7 +19,6 @@
             </div>
             <div class="form-group">
                 <label for="SessionTime">Час сеансу</label>
-                <!-- Задаємо name="newSessionId", щоб новий сеанс передавався у POST -->
                 <select id="SessionTime" name="newSessionId" asp-items="@(ViewBag.SessionTime as SelectList)" class="form-control"></select>
             </div>
             <div class="form-group">
