--- a/CinemaInfrastructure/Views/FilmRatings/Create.cshtml
+++ b/CinemaInfrastructure/Views/FilmRatings/Create.cshtml
@@ -13,20 +13,20 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ViewerId" class="control-label"></label>
+                <label asp-for="ViewerId" class="control-label">Глядач</label>
                 <select asp-for="ViewerId" class ="form-control" asp-items="ViewBag.ViewerId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="FilmId" class="control-label"></label>
+                <label asp-for="FilmId" class="control-label">Фільм</label>
                 <select asp-for="FilmId" class ="form-control" asp-items="ViewBag.FilmId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Rating" class="control-label"></label>
+                <label asp-for="Rating" class="control-label">Оцінка</label>
                 <input asp-for="Rating" class="form-control" />
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Створити" class="btn btn-primary" />
             </div>
         </form>
     </div>
