--- a/CinemaInfrastructure/Views/FilmRatings/Details.cshtml
+++ b/CinemaInfrastructure/Views/FilmRatings/Details.cshtml
@@ -10,27 +10,20 @@
     <h4>оцінка</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Rating)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Rating)
+        <dt class="col-sm-2">Глядач</dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Viewer.Name)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Film)
-        </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-2">Фільм</dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Film.Name)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Viewer)
-        </dt>
+        <dt class = "col-sm-2">Оцінка</dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Viewer.Name)
+            @Html.DisplayFor(model => model.Rating)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Назад</a>
 </div>
