--- a/CinemaInfrastructure/Views/Films/Create.cshtml
+++ b/CinemaInfrastructure/Views/Films/Create.cshtml
@@ -10,42 +10,40 @@
 
 <div class="row">
     <div class="col-md-4">
-        <!-- Пам'ятайте: method="post" без коми, атрибут asp-action="Create" -->
         <form asp-action="Create" method="post">
 
-            <!-- Виводить помилки, які не прив'язані до конкретного поля -->
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Назва</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="CompanyId" class="control-label"></label>
+                <label asp-for="CompanyId" class="control-label">Виробник</label>
                 <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
             </div>
 
             <div class="form-group">
-                <label asp-for="FilmCategoryId" class="control-label"></label>
+                <label asp-for="FilmCategoryId" class="control-label">Категорія фільму</label>
                 <select asp-for="FilmCategoryId" class="form-control" asp-items="ViewBag.FilmCategoryId"></select>
             </div>
 
             <div class="form-group">
-                <label asp-for="ReleaseDate" class="control-label"></label>
+                <label asp-for="ReleaseDate" class="control-label">Дата виходу</label>
                 <input asp-for="ReleaseDate" class="form-control" />
                 <span asp-validation-for="ReleaseDate" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
+                <label asp-for="Description" class="control-label">Опис</label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Створити" class="btn btn-primary" />
             </div>
         </form>
     </div>
