--- a/CinemaInfrastructure/Views/Halls/Create.cshtml
+++ b/CinemaInfrastructure/Views/Halls/Create.cshtml
@@ -32,7 +32,7 @@
                 <select asp-for="HallTypeId" class ="form-control" asp-items="ViewBag.HallTypeId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Створити" class="btn btn-primary" />
             </div>
         </form>
     </div>
