--- a/CinemaInfrastructure/Views/Viewers/Details.cshtml
+++ b/CinemaInfrastructure/Views/Viewers/Details.cshtml
@@ -10,21 +10,17 @@
     <h4>Viewer</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+        <dt class = "col-sm-2">Ім'я'</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateOfBirth)
-        </dt>
+        <dt class = "col-sm-2">Дата народження</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DateOfBirth)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@Model.Id">Редагувати</a>
+    <a asp-action="Index">Назад</a>
 </div>
