--- a/CinemaInfrastructure/wwwroot/css/site.css
+++ b/CinemaInfrastructure/wwwroot/css/site.css
@@ -29,3 +29,25 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+
+.seat-btn {
+    width: 40px;
+    height: 40px;
+    border: 1px solid #ccc;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
+    .seat-btn.selected {
+        background-color: #6f42c1;
+        color: white;
+    }
+
+    .seat-btn.booked {
+        background-color: #ced4da;
+        color: black;
+        cursor: not-allowed;
+    }
+
