--- a/CinemaInfrastructure/Views/Home/Index.cshtml
+++ b/CinemaInfrastructure/Views/Home/Index.cshtml
@@ -5,7 +5,13 @@
 <div class="text-center">
     <h1 class="display-3">DreamScreen</h1>
 </div>
-
+<div class="text-center">
+<img src="~/img/Рисунок1.png"
+     asp-append-version="true"
+     class="img-with-shadow"
+     width="810"
+     height="540" />
+</div>
 <div class="row">
     <div class="col-6">
         <div id="countByType"></div>
