--- a/CinemaInfrastructure/Views/Films/Details.cshtml
+++ b/CinemaInfrastructure/Views/Films/Details.cshtml
@@ -10,6 +10,9 @@
     <h4>фільм</h4>
     <hr />
     <dl class="row">
+        <div class="mb-4 text-left">
+            <img src="@Url.Content(Model.PosterPath)" alt="@Model.Name" class="img-fluid rounded" style="max-height: 300px;" />
+        </div>
         <dt class="col-sm-2">Назва</dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
