database for users moved to the main database, linked user with viewer, added checking for age

--- a/CinemaInfrastructure/Views/Account/Register.cshtml
+++ b/CinemaInfrastructure/Views/Account/Register.cshtml
@@ -3,14 +3,19 @@
 <form method="post" asp-controller="Account" asp-action="Register">
     <div asp-validation-summary="ModelOnly"></div>
     <div>
+        <label asp-for="Name">Ім'я</label><br />
+        <input asp-for="Name" />
+        <span asp-validation-for="Name"></span>
+    </div>
+    <div>
+        <label asp-for="DateOfBirth">Дата народження</label><br />
+        <input asp-for="DateOfBirth" type="date" />
+        <span asp-validation-for="DateOfBirth"></span>
+    </div>
+    <div>
         <label asp-for="Email"></label><br />
         <input asp-for="Email" />
         <span asp-validation-for="Email"></span>
-    </div>
-    <div>
-        <label asp-for="Year"></label><br />
-        <input asp-for="Year" />
-        <span asp-validation-for="Year"></span>
     </div>
     <div>
         <label asp-for="Password"></label><br />
