--- a/CinemaInfrastructure/Views/Viewers/Details.cshtml
+++ b/CinemaInfrastructure/Views/Viewers/Details.cshtml
@@ -10,7 +10,11 @@
     <h4>Viewer</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">Ім'я'</dt>
+        <dt class="col-sm-2">Електронна адреса</dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.User.Email)
+        </dd>
+        <dt class = "col-sm-2">Ім'я</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
