--- a/CinemaInfrastructure/Views/Shared/_Layout.cshtml
+++ b/CinemaInfrastructure/Views/Shared/_Layout.cshtml
@@ -15,49 +15,76 @@
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DreamScreen</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        @if (User.IsInRole("superadmin"))
+                        {
+                            <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Головна сторінка</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="FilmCategories" asp-action="Index">Категорії фільмів</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Companies" asp-action="Index">Виробники фільмів</a>
-                        </li>
-                        <li class="nav-item">
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="FilmCategories" asp-action="Index">Категорії фільмів</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Companies" asp-action="Index">Виробники фільмів</a>
+                            </li>
+                        }
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Films" asp-action="Index">Фільми</a>
+                            </li>
+                        
+                        @if(User.IsInRole("superadmin"))
+                            {
+                             <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="HallTypes" asp-action="Index">Типи залів</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Films" asp-action="Index">Фільми</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Halls" asp-action="Index">Зали</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Seats" asp-action="Index">Місця</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Sessions" asp-action="Index">Сеанси</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Viewers" asp-action="Index">Глядачі</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="FilmRatings" asp-action="Index">Оцінки</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Bookings" asp-action="Index">Бронювання</a>
-                        </li>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Halls" asp-action="Index">Зали</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Seats" asp-action="Index">Місця</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Viewers" asp-action="Index">Глядачі</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="FilmRatings" asp-action="Index">Оцінки</a>
+                            </li>
+                            }
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Sessions" asp-action="Index">Сеанси</a>
+                            </li>
+
+                        @if (User.IsInRole("superadmin") || User.IsInRole("user"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Bookings" asp-action="Index">Бронювання</a>
+                                </li>
+                            }
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+
+    @if (User.Identity.IsAuthenticated)
+    {
+        <p>@User.Identity.Name</p>
+
+        <form method="post" asp-controller="Account" asp-action="Logout">
+            <input type="submit" value="Вихід" />
+        </form>
+    }
+    else
+    {
+        <a asp-controller="Account" asp-action="Login">Вхід</a>
+        <a asp-controller="Account" asp-action="Register">Реєстація</a>
+    }
+
 
     <div class="container">
 
