--- a/CinemaInfrastructure/Views/Bookings/Details.cshtml
+++ b/CinemaInfrastructure/Views/Bookings/Details.cshtml
@@ -10,6 +10,9 @@
     <h4>Бронювання</h4>
     <hr />
     <dl class="row">
+        <div class="mb-4 text-left">
+            <img src="@Url.Content(Model.Session.Film.PosterPath)" alt="@Model.Session.Film.Name" class="img-fluid rounded" style="max-height: 300px;" />
+        </div>
         <dt class="col-sm-2">Глядач</dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Viewer.Name)
